--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -548,7 +548,7 @@ function publicidade(categoria = 0)
                         $('#empresa_detalhes').show();
                     });
 
-
+                    $('#banner').empty();
                     $.ajax({
                         url: "http://guiafacil.net.br/ap/detalheempresa.php",
                         dataType: "json",
